# benchmark-ouch

./: .cspell.json  .gitignore  404.html  cksum.md  index.html  mkdocs.yaml  ouch.md  pyproject.toml  sitemap.xml
.github/workflows/: bench.yaml  ci.yaml
SUMMARY/: index.html
cksum/: index.html
css/: custom.css
docs/: .gitignore  SUMMARY.md
ouch/: index.html
scripts/: prepare.sh
search/: search_index.json
src/bench/: cksum.py  ouch.py
