[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = ["prettytable>=3.11.0", "pydantic>=2.8.2"]
description = "Add your description here"
license = { text = "MIT" }
name = "benchmark-ouch"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.0.0"

[project.optional-dependencies]
docs = ["httpx>=0.27.2"]

[tool.rye]
dev-dependencies = [
  "icecream>=2.1.3",
  "marimo>=0.8.11",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-git-committers-plugin-2>=2.3.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2.7",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-material[imaging]>=9.5.34",
  "mkdocs-section-index>=0.3.9",
  "mkdocs>=1.6.1",
]
managed = true
virtual = true
